Update nama_file / perbaikan fitur

--- a/orders/templates/orders/product_detail.html
+++ b/orders/templates/orders/product_detail.html
@@ -250,7 +250,7 @@
             <label for="id_name">Nama Pemesan</label>
             {{ form.name }}
 
-            <label for="id_email">Email</label>
+            <label for="id_email">Email Anda</label>
             {{ form.email }}
 
             <label for="id_phone">No. HP</label>
